@@ -249,6 +249,7 @@ void Client::handleMessages(int count, const drawdance::Message *msgs)
 			qInfo("Catchup: caught up to %d messages", m_caughtUp);
 			emit catchupProgress(100);
 			m_catchupTo = 0;
+			m_server->setSmoothing(true);
 		} else {
 			int progress = 100 * m_caughtUp / m_catchupTo;
 			if(progress != m_catchupProgress) {
@@ -299,6 +300,7 @@ void Client::handleServerReply(const ServerReply &reply)
 		handleResetRequest(reply);
 		break;
 	case ServerReply::ReplyType::Catchup:
+		m_server->setSmoothing(false);
 		m_catchupTo = reply.reply["count"].toInt();
 		qInfo("Catching up to %d messages", m_catchupTo);
 		m_caughtUp = 0;
