@@ -39,6 +39,8 @@ public:
 	bool supportsPersistence() const override { return m_supportsPersistence; }
 	bool supportsAbuseReports() const override { return m_supportsAbuseReports; }
 
+	void setSmoothing(bool enabled) override { m_msgqueue->setSmoothing(enabled); }
+
 	int artificialLagMs() const override { return m_msgqueue->artificalLagMs(); }
 	void setArtificialLagMs(int msecs) override { m_msgqueue->setArtificialLagMs(msecs); }
 
