@@ -1,5 +1,6 @@
 Unreleased Version 2.2.0-pre
  * Fix: Don't forget account password when entering a wrong session password.
+ * Fix: Smoothe out the timing of strokes received over the network to not make them appear jerky because of the paint engine drawing them too fast.
 
 2023-06-21 Version 2.2.0-beta.5
  * Made the new default theme *actually* the default theme, don't sync it with the theme from Drawpile 2.1.
